<resources>
    <string name="app_name">道和交易平台</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="homeNav">首页</string>
    <string name="priceNav">行情</string>
    <string name="chooseNav">自选</string>
    <string name="noticeNav">公告</string>
    <string name="tradeNav">交易</string>
    <string name="nav_loginOrRegister">登录/注册</string>
    <string name="nav_userMoneyOrAccount">账户资金</string>
    <string name="nav_tradeDetail">成交明细</string>
    <string name="nav_tradeTotal">成交汇总</string>
    <string name="nav_moneyInRecord">入金记录</string>
    <string name="nav_moneyOutRecord">出金记录</string>
    <string name="nav_moneyLogRecord">资金明细</string>
    <string name="nav_operationLog">操作日志</string>
    <string name="nav_schoolOnLine">在线学堂</string>
    <string name="nav_moneyIn">入金</string>
    <string name="nav_moneyOut">出金</string>
    <string name="nav_moifyPassword">修改密码</string>
    <string name="nav_exit">退出</string>
    <string name="nav_disclaimOfliability">免责声明</string>
    <string name="nav_about">联系我们</string>
    <string name="nav_userInfo">个人信息</string>
    <string name="nav_aboutSoftWare">关于软件</string>
    <string name="nav_switchAccount">切换账号</string>
    <string-array name="nav_list">
        <item>@string/nav_userInfo</item>
        <item>@string/nav_operationLog</item>
        <item>@string/nav_moifyPassword</item>
        <item>@string/nav_disclaimOfliability</item>
        <item>@string/nav_about</item>
        <item>@string/nav_aboutSoftWare</item>
        <item>@string/nav_exit</item>

    </string-array>
    <string name="userInfo_userinfo">个人信息</string>
    <string name="userInfo_accountName">账户名</string>
    <string name="userInfo_userName">用户名</string>
    <string name="userInfo_userType">用户类型</string>
    <string name="userInfo_Phone">电话号码</string>
    <string name="userInfo_money">用户资金</string>
    <string name="userInfo_frozenMoney">冻结资金</string>
    <string-array name="userInfo_list">
        <item>@string/userInfo_accountName</item>
        <item>@string/userInfo_userName</item>
        <item>@string/userInfo_userType</item>
        <item>@string/userInfo_Phone</item>
        <item>@string/userInfo_money</item>
        <item>@string/userInfo_frozenMoney</item>

    </string-array>
    <string name="aboutSoftWare_aboutSoftWare">关于软件</string>
    <string name="aboutSoftWare_currentVersion">当前版本</string>
    <string name="aboutSoftWare_checkNewVersion">检查新版本</string>
    <string name="aboutSoftWare_size">软件的大小</string>
    <string name="aboutSoftWare_cashSize">清除缓存</string>
    <string name="aboutSoftWare_newVersionTips">新版本特性</string>
    <string-array name="aboutSoftWare_list">
        <item>@string/aboutSoftWare_currentVersion</item>
        <item>@string/aboutSoftWare_checkNewVersion</item>
    </string-array>
    <string name="welcome_inputTradeCode">请输入交易代码</string>
    <string name="welcome_enter">进入</string>
    <string name="login_userLogin">用户登录</string>
    <string name="login_inputUsername">请输入用户名</string>
    <string name="login_inputPassword">请输入密码</string>
    <string name="login_rememberPassword">记住用户名</string>
    <string name="login_rememberPasswordSuccess">已记住用户名</string>
    <string name="login_forgetPassword">忘记密码?</string>
    <string name="login_login">立即登录</string>
    <string name="login_register">注册账号</string>
    <string name="login_netFail">服务器连接失败,请检查网络是否连接</string>
    <string name="resetPassword_resetPassword">修改密码</string>
    <string name="resetPassword_inputOldPassword">请输入原密码</string>
    <string name="resetPassword_inputNewPassword">请输入新密码</string>
    <string name="resetPassword_inputNewPasswordAgain">请再次输入密码</string>
    <string name="resetPassword_enSure">确定</string>
    <string name="priceList_name">名称</string>
    <string name="priceList_price">最新</string>
    <string name="priceList_twClose">昨收</string>
    <string name="priceList_up">涨跌</string>
    <string name="priceList_down">幅度</string>
    <string name="priceList_open">开盘价</string>
    <string name="priceList_top">最高</string>
    <string name="priceList_bottom">最低</string>
    <string name="priceList_volume">成交量</string>
    <string name="priceList_turnover_volume">成交额</string>
    <string name="priceList_appoint">委比</string>
    <string-array name="moneyType_list">
        <item>邮币卡</item>
        <item>钱币</item>
        <item>IC卡</item>
        <item>纪念币</item>
        <item>金币</item>
    </string-array>
    <string name="chooseList_addChoose">+加自选</string>
    <string name="chooseList_stockCode">代码/名称</string>
    <string name="chooseList_add">加入</string>
    <string name="chooseList_cancel">取消</string>
    <string name="chooseList_deleteSure">删除确认</string>
    <string name="chooseList_sureDelete">确认删除</string>
    <string name="tradeOperate_out">卖出</string>
    <string name="tradeOperate_killOrder">撤单</string>
    <string name="tradeOperate_position">持仓</string>
    <string name="tradeOperate_in">买入</string>
    <string name="tradeOperate_query">查询</string>
    <string name="tradeOperate_position_waitingLoading">正在加载持仓信息,请稍等</string>
    <string name="tradeOperate_position_marketValue">名称/市值</string>
    <string name="tradeOperate_position_price">均价</string>
    <string name="tradeOperate_position_profitAndLoss">盈亏/比例</string>
    <string name="tradeOperate_position_position">持仓/可用</string>
    <string-array name="tradePosition_dialog">
        <item>名称:</item>
        <item>市值:</item>
        <item>均价:</item>
        <item>盈亏:</item>
        <item>比例:</item>
        <item>持仓:</item>
        <item>可用:</item>
    </string-array>
    <string name="tradeOperate_killOrder_productName">名称</string>
    <string name="tradeOperate_killOrder_price">价格</string>
    <string name="tradeOperate_killOrder_commissionAndTrade">委托/成交</string>
    <string name="tradeOperate_killOrder_type">类型</string>
    <string name="tradeOperate_killOrder_orderInfo">撤单信息</string>
    <string name="tradeOperate_killOrder_operate">1.操作：</string>
    <string name="tradeOperate_killOrder_code">2.代码：</string>
    <string name="tradeOperate_killOrder_name">3.名称：</string>
    <string name="tradeOperate_killOrder_price1">4.价格：</string>
    <string name="tradeOperate_killOrder_amount">5.数量：</string>
    <string name="tradeOperate_killOrder_ensure">确定</string>
    <string name="tradeOperate_killOrder_cancel">取消</string>
    <string name="tradeOperate_killOrder_waitingKill">正在撤单,请稍等</string>
    <string name="tradeOperate_killOrder_waitingLoading">正在加载单子信息,请稍等</string>
    <string-array name="tradekillOrder_dialog">
        <item>操作:</item>
        <item>代码:</item>
        <item>名称:</item>
        <item>价格:</item>
        <item>数量:</item>
    </string-array>
    <string name="tradeOperate_in_collectName">代码/名称</string>
    <string name="tradeOperate_in_price">价格</string>
    <string name="tradeOperate_in_amount">数量</string>
    <string name="tradeOperate_in_canBuyMoney">可用金额</string>
    <string name="tradeOperate_in_canBuyAmount">可买数量</string>
    <string name="tradeOperate_in_canSellAmount">可卖数量</string>
    <string name="tradeOperate_in_waiting">正在买入,请稍等</string>
    <string name="tradeOperate_out_waiting">正在卖出,请稍等</string>
    <string name="tradeOperate_int_allCount">全仓</string>
    <string name="tradeOperate_int_halfCount">半仓</string>
    <string name="tradeOperate_int_oneOfThreeCount">1/3仓</string>
    <string name="tradeOperate_int_oneOfFourCount">1/4仓</string>
    <string name="tradeOperate_in_downLimitPrice">跌停价:</string>
    <string name="tradeOperate_in_upLimitPrice">涨停价:</string>
    <string-array name="SellBuy_dialog">
        <item>名称:</item>
        <item>代码:</item>
        <item>价格:</item>
        <item>数量:</item>
    </string-array>
    <string-array name="nav_tradeOperate_query">
        <item>@string/nav_tradeDetail</item>
        <item>@string/nav_tradeTotal</item>
        <item>@string/nav_moneyInRecord</item>
        <item>@string/nav_moneyOutRecord</item>
        <item>@string/nav_moneyLogRecord</item>

    </string-array>
    <string name="stockDetail_lastestPrice">昨收</string>
    <string name="stockDetail_upAndDown">最高</string>
    <string name="stockDetail_TopPrice">最低</string>
    <string name="stockDetail_range">振幅</string>
    <string name="stockDetail_time">分时</string>
    <string name="stockDetail_dayK">日K</string>
    <string name="stockDetail_weekK">周K</string>
    <string name="stockDetail_monthK">月K</string>
    <string-array name="stockDetail_period">
        <item>1分钟</item>
        <item>5分钟</item>
        <item>15分钟</item>
        <item>30分钟</item>
        <item>1小时</item>
        <item>4小时</item>
    </string-array>
    <string-array name="stockDetail_quota">
        <item>MACD</item>
        <item>KDJ</item>
        <item>MA</item>
        <item>EMA</item>
        <item>关闭</item>
    </string-array>
    <string name="stockDetail_KLine">5分</string>
    <string name="stockDetail_fiveData">五档</string>
    <string name="stockDetail_detail">明细</string>
    <string name="stockDetail_fastBuy">快买</string>
    <string name="stockDetail_fastSell">快卖</string>
    <string name="stockDetail_goTrade">去交易</string>
    <string name="stockDetail_addChoose">+加自选</string>
    <string name="stockDetail_cutChoose">-减自选</string>
    <string name="stockDetail_ppw_buyAmount">买入数量</string>
    <string name="stockDetail_ppw_buy">买入</string>
    <string name="stockDetail_ppw_sellAmount">卖出数量</string>
    <string name="stockDetail_ppw_sell">卖出</string>
    <string-array name="stockDetail_dialog_moreInfo">
        <item>总市值:</item>
        <item>总额:</item>
        <item>流通量:</item>
        <item>成交量:</item>
        <item>涨停:</item>
        <item>跌停:</item>
        <item>换手率:</item>
        <item>IPO价格:</item>
    </string-array>
    <string name="operateLog_operateLog">操作日志</string>
    <string name="operateLog_detail">详情</string>
    <string name="operateLog_ip">IP</string>
    <string name="operateLog_addressTimeInfo">省市/时间</string>
    <string name="moneyInRecord_moneyInRecord">入金记录</string>
    <string name="moneyInRecord_orderNumber">单号</string>
    <string name="moneyInRecord_value">金额</string>
    <string name="moneyInRecord_state">状态</string>
    <string name="moneyInRecord_time">时间</string>
    <string-array name="moneyInAndOutRecord_dialog">
        <item>金额:</item>
        <item>状态:</item>
        <item>备注:</item>
        <item>时间:</item>
        <item>卡号:</item>
        <item>银行:</item>
    </string-array>
    <string name="moneyOutRecord_moneyOutRecord">出金记录</string>
    <string name="moneyOutRecord_name">名称</string>
    <string name="moneyOutRecord_price">成交价</string>
    <string name="moneyOutRecord_volume">成交量</string>
    <string name="moneyOutRecord_totalPrice">成交额</string>
    <string name="trade_detail_name">名称</string>
    <string name="trade_detail_Type">买/卖</string>
    <string name="trade_detail_price">单价</string>
    <string name="trade_detail_count">数量</string>
    <string name="trade_detail_charge">手续费</string>
    <string name="trade_detail_time">时间</string>
    <string name="trade_sum_name">名称</string>
    <string name="trade_sum_buyCount">买量</string>
    <string name="trade_sum_buyPrice">买入均价</string>
    <string name="trade_sum_sellCount">卖量</string>
    <string name="trade_sum_sellPrice">卖出均价</string>
    <string name="trade_sum_buyCharge">买手续费</string>
    <string name="trade_sum_sellCharge">卖出手续费</string>
    <string name="trade_sum_time">汇总日期</string>
    <string name="tv_money_out_id">序号</string>
    <string name="tv_money_out_bankName">银行</string>
    <string name="tv_money_out_bankCard">卡号</string>
    <string name="tv_money_out_bankUserName">户主</string>
    <string name="tv_money_out_money">金额</string>
    <string name="tv_money_out_status">状态</string>
    <string name="tv_money_out_time">时间</string>
    <string name="tv_money_out_note">备注</string>
</resources>