<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#141414"
    android:id="@+id/rootLayout_stockDetail">

    <include layout="@layout/header_stock_detail"></include>

    <RadioGroup
        android:id="@+id/radioGroup_stockDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rbtn_stockDetail_time"
            style="@style/StockDetail_rb_style"
            android:text="@string/stockDetail_time">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbtn_stockDetail_KLine"
            style="@style/StockDetail_rb_style"
            android:text="@string/stockDetail_KLine"
            android:layout_marginLeft="1dp">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbtn_stockDetail_dayK"
            style="@style/StockDetail_rb_style"
            android:text="@string/stockDetail_dayK"
            android:layout_marginLeft="1dp">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbtn_stockDetail_weekK"
            style="@style/StockDetail_rb_style"
            android:text="@string/stockDetail_weekK"
            android:layout_marginLeft="1dp">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbtn_stockDetail_period"
            style="@style/StockDetail_rb_style"
            android:text="@string/stockDetail_period"
            android:checked="true"
            android:layout_marginLeft="1dp"></RadioButton>

        <RadioButton
            android:id="@+id/rbtn_tradeOperate_detail"
            style="@style/StockDetail_rb_style"
            android:text="@string/stockDetail_monthK"
            android:layout_marginLeft="1dp"></RadioButton>
        >
    </RadioGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/framelayout_stockDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/red"
                android:text="K线图加载中"
                android:layout_gravity="center"/>-->
            <dianshi.matchtrader.view.KChartView
                android:id="@+id/kLineView_stockDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF" />

        </FrameLayout>


        <include
            layout="@layout/slidelayout_stock_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

        </include>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TextView
                android:id="@+id/tv_stockDetail_fastBuy"
                style="@style/StockDetail_btn_style"
                android:text="@string/stockDetail_fastBuy" />

            <TextView
                android:id="@+id/tv_stockDetail_fastSell"
                style="@style/StockDetail_btn_style"
                android:text="@string/stockDetail_fastSell"
                android:layout_marginLeft="1dp" />

            <TextView
                android:id="@+id/tv_stockDetail_goTrade"
                style="@style/StockDetail_btn_style"
                android:text="@string/stockDetail_goTrade"
                android:layout_marginLeft="1dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_stockDetail_addChoose"
            style="@style/StockDetail_btn_style"
            android:layout_weight="2"
            android:text="@string/stockDetail_addChoose"
            android:layout_marginLeft="1dp" />

    </LinearLayout>


</LinearLayout>
