<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#141414">

    <RadioGroup
        android:id="@+id/radioGroup_tradeOperate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rbtn_tradeOperate_in"
            style="@style/trade_rb_style"
            android:text="@string/tradeOperate_in"
            android:checked="true">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbtn_tradeOperate_out"
            style="@style/trade_rb_style"
            android:text="@string/tradeOperate_out"
            android:layout_marginLeft="1dp">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbtn_tradeOperate_killOrder"
            style="@style/trade_rb_style"
            android:text="@string/tradeOperate_killOrder"
            android:layout_marginLeft="1dp">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbtn_tradeOperate_position"
            style="@style/trade_rb_style"
            android:text="@string/tradeOperate_position"
            android:layout_marginLeft="1dp">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbtn_tradeOperate_query"
            style="@style/trade_rb_style"
            android:text="@string/tradeOperate_query"
            android:layout_marginLeft="1dp">

        </RadioButton>
        >
    </RadioGroup>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager_tradeOperate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp">

    </android.support.v4.view.ViewPager>

    <FrameLayout
        android:id="@+id/framelayout_tradeOperate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp">

    </FrameLayout>


</LinearLayout>
