<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="#f0f0f0">


    <TextView
        android:id="@+id/tv_money_out_id"
        style="@style/header_price_tv_style"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/tv_money_out_id"
        android:layout_width="80dp" />

    <dianshi.matchtrader.view.InterceptScrollContainer
        android:id="@+id/scroollContainter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_money_out_id"
        android:focusable="false">

        <dianshi.matchtrader.view.MyHScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_money_out_bankName"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/tv_money_out_bankName"
                    android:layout_width="200dp" />

                <TextView
                    android:id="@+id/tv_money_out_bankCard"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/tv_money_out_bankCard"
                    android:layout_width="160dp" />

                <TextView
                    android:id="@+id/tv_money_out_bankUserName"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/tv_money_out_bankUserName"
                    android:layout_width="100dp" />

                <TextView
                    android:id="@+id/tv_money_out_money"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/tv_money_out_money"
                    android:layout_width="120dp" />

                <TextView
                    android:id="@+id/tv_money_out_status"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/tv_money_out_status"
                    android:layout_width="80dp" />

                <TextView
                    android:id="@+id/tv_money_out_time"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/tv_money_out_time"
                    android:layout_width="200dp" />

                <TextView
                    android:id="@+id/tv_money_out_note"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/tv_money_out_note"
                    android:layout_width="250dp" />
            </LinearLayout>
        </dianshi.matchtrader.view.MyHScrollView>
    </dianshi.matchtrader.view.InterceptScrollContainer>
</RelativeLayout>