<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>

    <RadioGroup
        android:id="@+id/navRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_home"
            android:text="@string/homeNav"
            android:checked="true"
            android:id="@+id/home_tab" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_price"
            android:text="@string/priceNav"
            android:id="@+id/price_tab" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_choose"
            android:text="@string/chooseNav"
            android:id="@+id/select_tab" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_trade"
            android:text="@string/tradeNav"
            android:id="@+id/trade_tab" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_notice"
            android:text="@string/noticeNav"
            android:id="@+id/notice_tab" />

    </RadioGroup>
</LinearLayout>
