<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="#f0f0f0">


    <TextView
        android:id="@+id/tv_trade_detail_list_header_name"
        style="@style/header_price_tv_style"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/trade_detail_name"
        android:layout_width="160dp" />

    <dianshi.matchtrader.view.InterceptScrollContainer
        android:id="@+id/scroollContainter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_trade_detail_list_header_name"
        android:focusable="false">

        <dianshi.matchtrader.view.MyHScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_trade_detail_list_header_type"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/trade_detail_Type" />

                <TextView
                    android:id="@+id/tv_trade_detail_list_header_price"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/trade_detail_price" />

                <TextView
                    android:id="@+id/tv_trade_detail_list_header_count"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/trade_detail_count" />

                <TextView
                    android:id="@+id/tv_trade_detail_list_header_charge"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/trade_detail_charge" />

                <TextView
                    android:id="@+id/tv_trade_detail_list_header_time"
                    style="@style/header_price_tv_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/trade_detail_time"
                    android:layout_width="220dp" />
            </LinearLayout>
        </dianshi.matchtrader.view.MyHScrollView>
    </dianshi.matchtrader.view.InterceptScrollContainer>
</RelativeLayout>